force-app/main/default/objects/Contract/fields/Autorenews__c.field-meta.xml
<CustomField>
    <fullName>Autorenews__c</fullName>
    <description>Whether the contract will automatically renew at the end of the current term.</description>
    <inlineHelpText>Whether the contract will automatically renew at the end of the current term.</inlineHelpText>
    <label>Autorenews</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>