force-app/main/default/objects/Contract/fields/BAA__c.field-meta.xml
<CustomField>
    <fullName>BAA__c</fullName>
    <description>Whether a BAA is required and signed as an addition to this agreement</description>
    <inlineHelpText>Whether a BAA is required and signed as an addition to this agreement</inlineHelpText>
    <label>BAA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>