force-app/main/default/objects/Contract/fields/BAA_URL_Optional__c.field-meta.xml
<CustomField>
    <fullName>BAA_URL_Optional__c</fullName>
    <description>URL of where the signed BAA is stored in Google Drive</description>
    <inlineHelpText>URL of where the signed BAA is stored in Google Drive</inlineHelpText>
    <label>BAA URL (Optional)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>