force-app/main/default/objects/Contract/fields/Cobranding__c.field-meta.xml
<CustomField>
    <fullName>Cobranding__c</fullName>
    <description>Whether the branding clause was preserved in our contract and requires customer to display ElevenLabs logo in their product. This is typically required for competitive use cases.</description>
    <inlineHelpText>Whether the branding clause was preserved in our contract and requires customer to display ElevenLabs logo in their product. This is typically required for competitive use cases.</inlineHelpText>
    <label>Cobranding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>