force-app/main/default/objects/Contract/fields/Contract_URL__c.field-meta.xml
<CustomField>
    <fullName>Contract_URL__c</fullName>
    <description>URL of where the signed contract is stored in Google Drive</description>
    <inlineHelpText>URL of where the signed contract is stored in Google Drive</inlineHelpText>
    <label>Contract URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>