force-app/main/default/objects/Contract/fields/Customer_Signed__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the customer has signed the contract yet</description>
    <inlineHelpText>Whether the customer has signed the contract yet</inlineHelpText>
    <label>Customer Signed</label>
    <type>Checkbox</type>
</CustomField>