force-app/main/default/objects/Contract/fields/End_Date_Calculation__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Calculation__c</fullName>
    <formula>EndDate &lt;= TODAY() - 90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date Calculation (Within 90 Days)</label>
    <type>Checkbox</type>
</CustomField>