force-app/main/default/objects/Contract/fields/License_Purpose__c.field-meta.xml
<CustomField>
    <fullName>License_Purpose__c</fullName>
    <description>The use case or purpose of the agreement. This is typically what comes after section 1 b. License purpose</description>
    <inlineHelpText>The use case or purpose of the agreement. This is typically what comes after section 1 b. License purpose</inlineHelpText>
    <label>License Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>