force-app/main/default/objects/Contract/fields/Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period__c</fullName>
    <description>Number of days prior to auto renewal that the customer has to cancel the auto renewal</description>
    <inlineHelpText>Number of days prior to auto renewal that the customer has to cancel the auto renewal</inlineHelpText>
    <label>Notice Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>