force-app/main/default/objects/Contract/fields/Publicity__c.field-meta.xml
<CustomField>
    <fullName>Publicity__c</fullName>
    <description>&quot;Whether the publicity clause was preserved in our contract.

This determines whether we are allowed to publicize our relationship (e.g. use their logo on our website, do a case study, etc.)&quot;</description>
    <inlineHelpText>&quot;Whether the publicity clause was preserved in our contract.

This determines whether we are allowed to publicize our relationship (e.g. use their logo on our website, do a case study, etc.)&quot;</inlineHelpText>
    <label>Publicity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Allowed</fullName>
            </value>
            <value>
                <fullName>Allowed</fullName>
            </value>
            <value>
                <fullName>Permission Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>