force-app/main/default/objects/Contract/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of enterprise agreement</description>
    <inlineHelpText>Type of enterprise agreement</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Master Service Agreement</fullName>
            </value>
            <value>
                <fullName>Sales Order Form</fullName>
            </value>
            <value>
                <fullName>Proof of Concept</fullName>
            </value>
            <value>
                <fullName>Terms of Engagement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>